// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoiceSearch Rendering with custom component for button with isListening: false 1`] = `
<VoiceSearch
  buttonComponent={[Function]}
  isBrowserSupported={true}
  isListening={false}
  toggleListening={[Function]}
  translate={[Function]}
  voiceListeningState={
    Object {
      "errorCode": undefined,
      "isSpeechFinal": undefined,
      "status": "initial",
      "transcript": undefined,
    }
  }
/>
`;

exports[`VoiceSearch Rendering with custom component for button with isListening: true 1`] = `
<VoiceSearch
  buttonComponent={[Function]}
  isBrowserSupported={true}
  isListening={true}
  toggleListening={[Function]}
  translate={[Function]}
  voiceListeningState={
    Object {
      "errorCode": undefined,
      "isSpeechFinal": undefined,
      "status": "recognizing",
      "transcript": undefined,
    }
  }
/>
`;

exports[`VoiceSearch Rendering with custom template for status 1`] = `
<VoiceSearch
  isBrowserSupported={true}
  isListening={true}
  statusComponent={[Function]}
  toggleListening={[Function]}
  translate={[Function]}
  voiceListeningState={
    Object {
      "errorCode": undefined,
      "isSpeechFinal": false,
      "status": "recognizing",
      "transcript": "Hello",
    }
  }
/>
`;

exports[`VoiceSearch Rendering with default props 1`] = `
<VoiceSearch
  isBrowserSupported={true}
  isListening={false}
  toggleListening={[Function]}
  translate={[Function]}
  voiceListeningState={
    Object {
      "errorCode": undefined,
      "isSpeechFinal": undefined,
      "status": "initial",
      "transcript": undefined,
    }
  }
/>
`;
